--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test": "nyc --reporter=html --reporter=text mocha --reporter progress tools/testSetup.js \"src/**/*.spec.js\"",
+    "test:watch": "npm run test -- --watch",
+    "coverage": "istanbul cover _mocha -- R test"
   },
   "author": "Cory House",
   "license": "MIT",
@@ -50,10 +51,12 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "istanbul": "^0.4.5",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
+    "nyc": "^11.3.0",
     "open": "0.0.5",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
